--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -9,5 +9,8 @@
     </head>
     <body>
         <h1>Menu Page</h1>
+        <div>
+            <h1>Margherita</h1> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <h1>Price 500 Rs</h1>
+        </div>
     </body>
 </html>
