--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <a href="booking.html">Booking</a> &nbsp; &nbsp;
         <a href="contact.html">Contact</a> &nbsp; &nbsp;
         </h2> <hr>
+        <img src="./Images/Pizza House.jpg "alt="pizzahouse img" height="350" width="600">
 </body>
 </html>
