In img tag images is added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Pizza House:The Taste of India</h1>
+    <h1 >Pizza House <img src="./Images/pizzaicon.png" alt="pizzaicon" height="40">:The Taste of India</h1> 
     <h2>
         <a href="index.html">Home</a> &nbsp; &nbsp;
         <a href="about.html">About</a> &nbsp; &nbsp;
@@ -12,6 +12,21 @@
         <a href="booking.html">Booking</a> &nbsp; &nbsp;
         <a href="contact.html">Contact</a> &nbsp; &nbsp;
         </h2> <hr>
-        <img src="./Images/Pizza House.jpg "alt="pizzahouse img" height="350" width="600">
+
+        <img src="./Images/pizzahouse.jpeg "alt="pizzahouse img" height="350" width="700">
+        <h1>Why to Choose us?</h1>
+
+        <img src="./Images/pizzaimg.jpg" alt="pizza img" height="100">
+        <h2>Fresh And Tastey Pizzas</h2>
+
+        <img src="./Images/Fast del.jpg" alt="Fast deliveryimg" height="100">
+        <h2>Fast Delivery</h2>
+
+        <img src="./Images/free del.avif" alt="free deliveryimg" height="100">
+        <h2>Free Deliviry</h2>
+
+        <img src="./Images/Veg nonveglogo.png" alt="img" height="100">
+        <h2>Veg & Nonveg Both are Available</h2>
+
 </body>
 </html>
