In anchor tag login nav bar is add

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="./Pages/menu.html">Menu</a> &nbsp; &nbsp;
         <a href="./Pages/Booking.html">Booking</a> &nbsp; &nbsp;
         <a href="./Pages/contact.html">Contact</a> &nbsp; &nbsp;
+        <a href="./Pages/login.html">Login</a> &nbsp; &nbsp;
     </h2> <hr>
 
         <h1>Authentic Italian Pizzas</h1>
@@ -34,7 +35,7 @@
         <h2><a href="./Pages/menu.html">Order Now</a></h2>
         <h2><a href="./Pages/Booking.html">Book the Table</a></h2>
         <h2><a href="./Pages/contact.html">Contact Us</a></h2>
-        
+
 
 
 
