--- a/Pages/Booking.html
+++ b/Pages/Booking.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <u><h1>Book A Table</h1></u>
-    <img src="c:\Users\dhong\Downloads\AdobeStock_775161162_Preview.jpeg" height="400px" width="800px"> <br/> 
+    <img src="/Images/Table Image.jpeg"
+             height="400px" width="800px"> <br/> 
+
     <h2>Book Your Table For Private Dinners & Happy Hours....</h2> <br/> 
 
         <form>
