--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
     <h1>Feedback</h1>
     <label for="Feedback" ><b>Enter you Feedback and suggestions here: <br/> <br/> </b></label> 
     <input type="text"/> <br/> <br/>
-    <img src="C:\Users\Londhe\Downloads\Restaurant-Thank-You.jpg"  height="200px" width="300px"/> <br/> <br/> 
+    <img src="./Images/thankyou.jpg" height="200" width="300"> <br/> <br/> 
     <button>Submmit</button>
 </body>
 </html>
