feedback nav bar is added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="./Pages/menu.html">Menu</a> &nbsp; &nbsp;
         <a href="./Pages/Booking.html">Booking</a> &nbsp; &nbsp;
         <a href="./Pages/contact.html">Contact</a> &nbsp; &nbsp;
+        <a href="./Pages/feedback.html">Feedback</a> &nbsp; &nbsp;
         <a href="./Pages/login.html">Login</a> &nbsp; &nbsp;
     </h2> <hr>
 
