--- a/Pages/services.html
+++ b/Pages/services.html
@@ -4,7 +4,9 @@
     <title>Services</title>
 </head>
 <body>
-    <h1><i><u>Explore Our Services Now!!</u></i></h1>
+    <h1><i><a href="./../index.html"><img src="./../Images/house.png" alt="" height="25px" width="25px"></a>&nbsp;&nbsp;<u>Explore Our Services Now!!</u></i></h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/TIL1dHDLIzg?si=bBJqd8OmY0Q8KuKL&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <hr>
     <hr>
     <div>
         <h2><u>Master Chefs</u>
