--- a/Pages/services.html
+++ b/Pages/services.html
@@ -4,19 +4,24 @@
     <title>Services</title>
 </head>
 <body>
-    <h1><i><a href="./../index.html"><img src="./../Images/house.png" alt="" height="25px" width="25px"></a>&nbsp;&nbsp;<u>Explore Our Services Now!!</u></i></h1>
+    <h1><a href="./../index.html"><img src="./../Images/house.png" alt="" height="25px" width="25px"></a>&nbsp;&nbsp;<u>OUR SERVICES:-</u></h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/TIL1dHDLIzg?si=bBJqd8OmY0Q8KuKL&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <hr>
     <hr>
-    <div>
+    <h2><i><u>Explore Our Services Now!!</u></i></h2>
+    <a href="#master-chef">Master Chef</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="#quality-food">Quality Food</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="#online-order">Online Orders</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="#24/7-service">24/7 Services</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <div id="master-chef">
         <h2><u>Master Chefs</u>
         <img src="./../Images/cooking.png" alt=""
-        height="25px"
+        height="30px"
         width="30px"></h2>
         <img src="./../Images/master-chef.jpg" alt=""><p>At Pizza House, our master chefs bring a touch of culinary artistry to every pizza they create. Each slice is a testament to their expertise and passion, crafted to perfection with the finest ingredients. Whether you're savoring a classic favorite or exploring a gourmet creation, our chefs' dedication to excellence ensures an unforgettable dining experience. Come and taste the difference that true mastery makes, only at Pizza House.</p>
     </div>
     <hr>
-    <div>
+    <div id="quality-food">
         <h2><u>Quality Food</u>
         <img src="./../Images/spoon-and-fork.png" alt="" 
         height="30px"
@@ -24,7 +29,7 @@
         <img src="./../Images/quality-food.jpg" alt=""><p>At Pizza House, we pride ourselves on delivering quality food services that delight and satisfy. Our expert chefs use only the freshest ingredients to craft pizzas bursting with flavor. Whether you're dining in or taking out, you can always expect exceptional taste and service. Experience the best in quality food with every bite, only at Pizza House.</p>
     </div>
     <hr>
-    <div>
+    <div id="online-order">
         <h2><u>Online Orders</u>
         <img src="./../Images/order.png" alt="" 
         height="30px"
@@ -33,7 +38,7 @@
         <p>Enjoy the convenience of online ordering with Pizza House! Our seamless online service makes it easy to get your favorite pizzas delivered right to your door. Browse our menu, customize your order, and enjoy fast, reliable delivery. Experience the ease and deliciousness of Pizza House, just a few clicks away.</p>
     </div>
     <hr>
-    <div>
+    <div id="24/7-service">
         <h2><u>24/7 Service</u>
             <img src="./../Images/24-hours-phone-service.png" alt="" 
             height="30px"
