table image added

--- a/Pages/Booking.html
+++ b/Pages/Booking.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <u><h1>Book A Table</h1></u>
-    <img src="./Images/tableimag.jpeg"
+    <img src="../Images/tableimag.jpeg"
              height="400px" width="800px"> <br/> 
 
     <h2>Book Your Table For Private Dinners & Happy Hours....</h2> <br/> 
