--- a/Pages/services.html
+++ b/Pages/services.html
@@ -18,7 +18,10 @@
         <img src="./../Images/cooking.png" alt=""
         height="30px"
         width="30px"></h2>
-        <img src="./../Images/master-chef.jpg" alt=""><p>At Pizza House, our master chefs bring a touch of culinary artistry to every pizza they create. Each slice is a testament to their expertise and passion, crafted to perfection with the finest ingredients. Whether you're savoring a classic favorite or exploring a gourmet creation, our chefs' dedication to excellence ensures an unforgettable dining experience. Come and taste the difference that true mastery makes, only at Pizza House.</p>
+        <img src="./../Images/master-chef.jpg" alt="">
+        <ul type="disc">
+            <li>At Pizza House, our master chefs bring a touch of culinary artistry to every pizza they create.</li><li>Each slice is a testament to their expertise and passion, crafted to perfection with the finest ingredients.</li><li>Whether you're savoring a classic favorite or exploring a gourmet creation, our chefs' dedication to excellence ensures an unforgettable dining experience.</li><li>Come and taste the difference that true mastery makes, only at Pizza House.</li>
+        </ul>
     </div>
     <hr>
     <div id="quality-food">
@@ -26,7 +29,10 @@
         <img src="./../Images/spoon-and-fork.png" alt="" 
         height="30px"
         width="30px"></h2>
-        <img src="./../Images/quality-food.jpg" alt=""><p>At Pizza House, we pride ourselves on delivering quality food services that delight and satisfy. Our expert chefs use only the freshest ingredients to craft pizzas bursting with flavor. Whether you're dining in or taking out, you can always expect exceptional taste and service. Experience the best in quality food with every bite, only at Pizza House.</p>
+        <img src="./../Images/quality-food.jpg" alt="">
+        <ul type="disc">
+        <li>At Pizza House, we pride ourselves on delivering quality food services that delight and satisfy.</li><li>Our expert chefs use only the freshest ingredients to craft pizzas bursting with flavor.</li><li>Whether you're dining in or taking out, you can always expect exceptional taste and service.</li><li>Experience the best in quality food with every bite, only at Pizza House.</li>
+        </ul>
     </div>
     <hr>
     <div id="online-order">
@@ -35,7 +41,9 @@
         height="30px"
         width="30px"></h2>
         <img src="./../Images/online-delivery.jpg" alt="" height="160px" width="300px">
-        <p>Enjoy the convenience of online ordering with Pizza House! Our seamless online service makes it easy to get your favorite pizzas delivered right to your door. Browse our menu, customize your order, and enjoy fast, reliable delivery. Experience the ease and deliciousness of Pizza House, just a few clicks away.</p>
+        <ul type="disc">
+        <li>Enjoy the convenience of online ordering with Pizza House!</li><li>Our seamless online service makes it easy to get your favorite pizzas delivered right to your door.</li><li>Browse our menu, customize your order, and enjoy fast, reliable delivery.</li><li>Experience the ease and deliciousness of Pizza House, just a few clicks away.</li>
+        </ul>
     </div>
     <hr>
     <div id="24/7-service">
@@ -43,7 +51,10 @@
             <img src="./../Images/24-hours-phone-service.png" alt="" 
             height="30px"
             width="30px"></h2>
-        <img src="./../Images/service-img.jpg" alt="" height="150px" width="280px"><p>Pizza cravings can strike at any time, and Pizza House is here for you 24/7! Our around-the-clock service ensures you can enjoy our delicious pizzas whenever you want, day or night. With our dedicated team always ready to serve, you never have to wait for your next pizza fix. Experience the convenience and satisfaction of Pizza House, available anytime you need us.</p>
+        <img src="./../Images/service-img.jpg" alt="" height="150px" width="280px">
+        <ul type="disc">
+        <li>Pizza cravings can strike at any time, and Pizza House is here for you 24/7!</li><li>Our around-the-clock service ensures you can enjoy our delicious pizzas whenever you want, day or night.</li><li>With our dedicated team always ready to serve, you never have to wait for your next pizza fix.</li><li>Experience the convenience and satisfaction of Pizza House, available anytime you need us.</li>
+        </ul>
     </div>
 
 </body>
