--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -11,7 +11,8 @@
 
      <img src="download.png" height="20" width="20"><b>phone no:-</b>+91-7820XXXXXX<br><br>
 
-    
+     <img src="mail.png" height="20" width="20" > <b>Email:-</b>pizzahouse11@gmail.com<br><br>
+    <hr/><hr/>
 
 </body>
 </html>
