heading is added

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,6 +4,7 @@
     <title>About Page</title>
 </head>
 <body>
-    About Page
+    <h1>About Pizza House <a href="../index.html"><img src="../Images/house.png" alt="house img" height="30"></a></h1>
+   
 </body>
 </html>
