--- a/Pages/about.html
+++ b/Pages/about.html
@@ -6,5 +6,7 @@
 <body>
     <h1>About Pizza House <a href="../index.html"><img src="../Images/house.png" alt="house img" height="30"></a></h1>
      <hr>
+     <img src="../Images/food court.jpg" alt="Food court img" height="500">
+     
 </body>
 </html>
