heading and paragraph is added

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -7,6 +7,8 @@
     <h1>About Pizza House <a href="../index.html"><img src="../Images/house.png" alt="house img" height="30"></a></h1>
      <hr>
      <img src="../Images/food court.jpg" alt="Food court img" height="500">
+     <h1>WELCOME TO <img src="../Images/pizza.png" alt="pizza icon" height="30">PIZZA HOUSE</h1>
+     <h4><p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p></h4>
      
 </body>
 </html>
