--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -15,7 +15,9 @@
         <img src="download.png" height="20" width="20"></h3></a>
 
 
-     <img src="mail.png" height="20" width="20" > <b>Email:-</b>pizzahouse11@gmail.com<br><br>
+        <a href="mailto:pizzahouse11@gmail.com"><h3>SEND MAIL
+            <img src="mail.png" height="20" width="20" > </h3></a>
+            <br><br>
     <hr/><hr/>
     
 
