--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -8,7 +8,7 @@
     <h1>Contact to Pizza House</h1>
        
     <a href="Adke Nagar,Beside Datta mandir, Nashik, Maharashtra, 422214., Nashik City,422214"><h3>ADDRESS
-        <img src="location.jpeg" height="20" width="20"> </h3></a>
+        <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\location.jpeg" height="20" width="20"> </h3></a>
     <h3>LOCATION</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242118.17006642753!2d73.69814885698612!3d18.52454503536725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf2e67461101%3A0x828d43bf9d9ee343!2sPune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1720005777408!5m2!1sen!2sin" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br><br>
 
@@ -17,7 +17,7 @@
 
 
         <a href="mailto:pizzahouse11@gmail.com"><h3>SEND MAIL
-            <img src="mail.png" height="20" width="20" > </h3></a>
+            <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\mail.png" height="20" width="20" > </h3></a>
             <br><br>
     <hr/><hr/>
     
