--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,7 +4,7 @@
     <title>Contact Page</title>
 </head>
 <body>
-    <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\pizzahouse.jpeg">
+    <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\pizzahouse.jpeg" height="20" weidth="20">
     <h1>Contact to Pizza House</h1>
        
     <a href="Adke Nagar,Beside Datta mandir, Nashik, Maharashtra, 422214., Nashik City,422214"><h3>ADDRESS
