add anchortag and image

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,8 +4,11 @@
     <title>Contact Page</title>
 </head>
 <body>
-    <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\pizzahouse.jpeg" height="20" weidth="20">
+    
     <h1>Contact to Pizza House</h1>
+    <a href="index.html">
+    <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\pizzahouse.jpeg" height="50" weidth="60">
+    </a>
        
     <a href="Adke Nagar,Beside Datta mandir, Nashik, Maharashtra, 422214., Nashik City,422214"><h3>ADDRESS
         <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\location.jpeg" height="20" width="20"> </h3></a>
