--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     
-    <h1>Contact to Pizza House</h1>
-    <a href="index.html">
-    <img src="C:\Users\ANKITA\Desktop\icp9.0-html-github-group1-project-1\Images\pizzahouse.jpeg" height="50" weidth="60">
-    </a>
+    <h1>Contact to Pizza House
+    <a href="../index.html">
+    <img src="../Images/pizzahouse.jpeg" height="50" weidth="60"> 
+    </a></h1>
        
     <a href="Adke Nagar,Beside Datta mandir, Nashik, Maharashtra, 422214., Nashik City,422214"><h3>ADDRESS
         <img src="../Images/location.png" height="20" width="20"> </h3></a>
