--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -4,10 +4,11 @@
     <title>Feedback</title>
 </head>
 <body>
-    <h1>Feedback</h1>
+    <img src="..\Images\feedbackimg.png" height="50" width="60">
+    <h1>Feedback</h1> 
     <label for="Feedback" ><b>Enter you Feedback and suggestions here: <br/> <br/> </b></label> 
     <input type="text"/> <br/> <br/>
-    <img src="./Images/thankyou.jpg" height="200" width="300"> <br/> <br/>
+    <img src="..\Images\thankyou.jpg" height="200" width="300"> <br/> <br/>
     <button>Submmit</button>
 </body>
 </html> 
