--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -6,6 +6,14 @@
 <body>
     <img src="..\Images\feedbackimg.png" height="50" width="60">
     <h1>Feedback</h1> 
+    <form>
+        <label for="Enter name">Enter your name:</label> <br/> <br/>
+        <input type="text" id="enter name" required/> <br/> <br/>
+        <label for="Enter email">Enter your email:</label> <br/> <br/>
+        <input type="email" id="enter email" required/> <br/> <br/>
+    </form>
+    
+    
     <label for="Feedback" ><b>Enter you Feedback and suggestions here: <br/> <br/> </b></label> 
     <input type="text"/> <br/> <br/>
     <img src="..\Images\thankyou.jpg" height="200" width="300"> <br/> <br/>
