--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -12,8 +12,16 @@
         <label for="Enter email">Enter your email:</label> <br/> <br/>
         <input type="email" id="enter email" required/> <br/> <br/>
     </form>
+    <form>
+        Did you visited our pizza house earlier? <br/> <br/>
+        <input type="radio" name="visit" id="yes" />
+        <label for="yes">Yes</label><br />
+        <input type="radio" name="visit" id="no" />
+        <label for="no">No</label>
+      </form>
     
     
+    <br/> <br/>
     <label for="Feedback" ><b>Enter you Feedback and suggestions here: <br/> <br/> </b></label> 
     <input type="text"/> <br/> <br/>
     <img src="..\Images\thankyou.jpg" height="200" width="300"> <br/> <br/>
