--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -18,8 +18,19 @@
         <label for="yes">Yes</label><br />
         <input type="radio" name="visit" id="no" />
         <label for="no">No</label>
+    </form> <br /><br />
+    <form>
+        Did you liked our service? <br /><br />
+        <input type="checkbox" id="need" />
+        <label for="need">Yes we did</label> <br /><br />
+  
+        <input type="checkbox" id="need1" />
+        <label for="need1">No we did not</label> <br />
+        <br />
+  
+        <input type="checkbox" id="need2" />
+        <label for="need2">Yes but not all of it</label> <br /><br />
       </form>
-    
     
     <br/> <br/>
     <label for="Feedback" ><b>Enter you Feedback and suggestions here: <br/> <br/> </b></label> 
